[package]
name = "got"
version = "1.0.0"
authors = ["Austin Foster <austindfostercs@gmail.com>"]
edition = "2024"
rust-version = "1.91.0"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
chrono = "0.4.42"
clap = { version = "4.5.42", features = ["debug", "derive"] }
flate2 = "1.0.34"                                # compression
hex = "0.4.3"
is_executable = "1.0.5"
sha1 = "0.10.6"
thiserror = "1.0.38"                             # error handling
